Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-22898

QHostAddress::operator==(SpecialAddress) fails if address is not IPv4 or IPv6 (QHostAddress::Any)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.0.0
    • 5.0.0
    • Network
    • None
    • 49140efe2d0a31fd529b8e6af09e0df31e3a719c

    Description

      QHostAddress addr(QHostAddress::Any);
      Q_ASSERT(addr == QHostAddress::Any);

      hits the assert with current Qt5.

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              shkearns Shane Kearns
              andrunko Andre Moreira Magalhaes
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes